# medical_chatbot

./: README.md  app.py  pyproject.toml  requirements.txt  setup.py  store_index.py  template.sh
.lh/: README.md.json  app.py.json  requirements.txt.json  store_index.py.json  strore_index.py.json
.lh/src/: helper.py.json  prompt.py.json
.lh/statics/: style.css.json
.lh/templates/: chat.html.json
src/: helper.py  prompt.py
statics/: style.css
templates/: chat.html
